package com.projeto3.SEBRAE.modelo;

public enum PerfilUsuario {
	ADMINISTRADOR,
	ALUNO
}
